demo/k8s/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-springboot-app-svc
  namespace: my-project
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: my-springboot-app
  type: LoadBalancer
